# solana-practice

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
datas/: metadata.json  suan-token.json  test-nft.json
programs/anchor-audit/: Cargo.toml
programs/anchor-audit/src/: lib.rs
programs/arbitrary-cpi/: Cargo.toml
programs/arbitrary-cpi/src/: lib.rs
programs/bump-seed-canonicalization/: Cargo.toml
programs/bump-seed-canonicalization/src/: lib.rs
programs/closing_accounts/: Cargo.toml
programs/closing_accounts/src/: lib.rs
programs/counter/src/: lib.rs
programs/create-account/: Cargo.toml
programs/create-account/src/: lib.rs
programs/pda-sharing/: Cargo.toml
programs/pda-sharing/src/: lib.rs
programs/solana-work/: Cargo.toml
programs/solana-work-practice/: Cargo.toml
programs/solana-work-practice/src/: lib.rs
programs/solana-work/src/: lib.rs
programs/token-2022/: Cargo.toml
programs/token-2022/src/: lib.rs
programs/token-creator/: Cargo.toml
programs/token-creator/src/: lib.rs
programs/token-manager/: Cargo.toml
programs/token-manager/src/: lib.rs
programs/token-minter/: Cargo.toml
programs/token-minter/src/: lib.rs
programs/token-minter/src/instructions/: create.rs  mint.rs  mod.rs  pda_create.rs  pda_mint.rs
tests/: counter.spec.ts  create-account.spec.ts  solana-work-practice.ts  solana-work.ts  token-2022.spec.ts  token-manager.spec.ts  token.spec.ts
