[package]
name = "solana-work"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_work"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = { version = "0.30.0", features = ["metadata"] }
spl-associated-token-account = "3.0.2"

solana-program = "1.18.14"
crates-io = "0.40.1"

num = "0.4.2"
syn = "2.0.60"
libc = "0.2.154"
quote = "1.0.36"
proc-macro2 = "1.0.81"
bitflags = "2.5.0"
rand = "0.8.5"
rand_core = "0.6.4"
cfg-if = "1.0.0"
serde = "1.0.200"
hashbrown = "0.14.5"
base64 = "0.22.1"
regex-automata = "0.4.6"
regex-syntax = "0.8.3"
log = "0.4.21"
serde_json = "1.0.116"
time = "0.3.36"
url = "2.5.0"
futures = "0.3.30"
aho-corasick = "1.1.3"
